@@ -89,8 +89,8 @@ externals-help:
 # All the externals at once.
 externals-ci: $(SVN_EXTERNALS_CI) $(SVN_EXTERNALS_PROXY:=-ci)
 externals-up: $(SVN_EXTERNALS_UP) $(SVN_EXTERNALS_PROXY:=-up)
-externals-up-ci: $(SVN_EXTERNALS_UP)
-	svn commit -m "Update externals." -N $(srcdir)
-externals-up-ch-ci: $(SVN_EXTERNALS_UP)
+externals-up-ci: externals-up
+# svn commit -m "Update externals." -N $(srcdir)
+externals-up-ch-ci: externals-up
 	$(MAKE) $(AM_MAKEFLAGS) check
 	svn commit -m "Update externals." -N $(srcdir)
